--- a/assets/index.css
+++ b/assets/index.css
@@ -67,19 +67,20 @@ nav{
     margin-bottom: 200px;
     padding-left: 30px;
     padding-right: 20px;
+    width: 100%;
 
 }
 .wrapper h2{
     color: white;
     font-family:'Montserrat', sans-serif;
-    font-size: 60px;
+    font-size: 40px;
     font-weight: 900;
 }
 
 .wrapper p{
     color: white!important;
     font-family:'Montserrat', sans-serif;
-    font-size: 20px;
+    font-size: 15px;
 }
 .wrapper .imagebox{
     margin-left: 60px!important;
@@ -132,11 +133,12 @@ nav{
 
   }
   
-  button {
+  .wrapper2 button {
     width: 200px;
     max-width: 100%;
     margin-top: 10px;
     margin-bottom: 10px;
+    margin-left: 20px;
     height: 35px;
     border: 1px solid #FFC107;
     background: transparent;
@@ -174,13 +176,13 @@ nav{
   }
   .copywrite p{
     color: white;
-    font-size: 30px;
+    font-size: 15px;
     font-family: 'Courier New', Courier, monospace;
   }
 
   .copywrite a{
     color: #FFC107;
-    font-size: 30px;
+    font-size: 15px;
     font-family: 'Courier New', Courier, monospace;
     text-decoration: none;
   }
